--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,6 +8,7 @@ body{
 .container{
     margin:0 auto;
     width:50%;
+    max-width: 350px;
     height:90vh;
     display: flex;
     align-items: center;
@@ -15,6 +16,7 @@ body{
 }
 .card{
     padding:20px;
+    width:100%;
     text-align: center;
     border-radius: 10px;
     background-color: hsl(0, 0%, 12%);
@@ -50,4 +52,13 @@ img{
 
 .attribution{
     text-align: center;
+}
+.attribution a{
+    text-decoration: none;
+    color:hsl(75, 94%, 57%);
+}
+
+.attribution a:hover{
+    text-decoration: none;
+    color:#fff;
 }
